--- a/NeighborhoodGuide/package.json
+++ b/NeighborhoodGuide/package.json
@@ -24,7 +24,7 @@
     "react-native": "0.81.4",
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.17.1"
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
